# rover_ws_v2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_control_wheeled_robot_hardware/include/ros2_control_wheeled_robot_hardware/: udp_wheeled_robot.hpp  wheeled_robot_hardware.hpp
install/ros2_control_wheeled_robot_hardware/share/ros2_control_wheeled_robot_hardware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  wheeled_robot_hardware.xml
install/ros2_control_wheeled_robot_hardware/share/ros2_control_wheeled_robot_hardware/cmake/: ament_cmake_export_dependencies-extras.cmake  ros2_control_wheeled_robot_hardwareConfig.cmake
install/rover_description/share/ament_index/resource_index/package_run_dependencies/: rover_description
install/rover_description/share/rover_description/: package.sh  package.xml
install/rover_description/share/rover_description/config/: description.rviz  gaz_ros2_use_sim.yaml  nav2_params.yaml
install/rover_description/share/rover_description/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
install/rover_description/share/rover_description/urdf/: gazebo_control.xacro  ros2_control.xacro  trk211.xacro  velodyne.gazebo.xacro
install/rover_description/share/rover_description/worlds/: gas_station.world
install/velodyne_description/share/velodyne_description/: package.sh
install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: local_setup.sh  package.sh
install/velodyne_simulator/share/velodyne_simulator/: package.sh
log/: latest_build
ros2_control_wheeled_robot_hardware/: CMakeLists.txt
ros2_control_wheeled_robot_hardware/include/ros2_control_wheeled_robot_hardware/: udp_wheeled_robot.hpp  wheeled_robot_hardware.hpp
ros2_control_wheeled_robot_hardware/src/: udp_wheeled_robot.cpp  wheeled_robot_hardware.cpp
rover_description/: CMakeLists.txt
rover_description/config/: description.rviz  my_controllers.yaml  nav2_params.yaml
rover_description/launch/: launch_sim.launch.py  navigation.launch.py  rsp.launch.py
rover_description/maps/: maps.yaml
rover_description/urdf/: camera.xacro  imu.xacro  trk211.xacro  velodyne.gazebo.xacro
rover_description/worlds/: cafe.world
rover_description/worlds/tennis_ball/: model.config  model.sdf
rover_slam/: CMakeLists.txt  package.xml
rover_slam/launch/: slam.launch.py
src/real_rover/: CMakeLists.txt  package.xml
src/real_rover/config/: controllers.yaml  rviz_config.rviz
src/real_rover/launch/: launch_rover.launch.py  rsp.launch.py
src/real_rover/meshes/: base.stl  wheel.stl
src/real_rover/urdf/: chassis.xacro  ros2_control.xacro  trk211.xacro
src/ros2_control_wheeled_robot_hardware/: CMakeLists.txt  package.xml
src/ros2_control_wheeled_robot_hardware/src/: udp_wheeled_robot.cpp  wheeled_robot_hardware.cpp
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: description.rviz  ekf.yaml  my_controllers.yaml
src/rover_description/launch/: launch_sim.launch.py  rsp.launch.py
src/rover_description/urdf/: chassis.xacro  imu.xacro  ros2_control.xacro  trk211.xacro
(+2 files in other folders)
